--- a/index.html
+++ b/index.html
@@ -55,16 +55,21 @@
       <a href="https://codepen.io/Abhishek-KU" id="profile-link" target="_blank"><i class="bi bi-code-slash"></i>CodePen</a>
     </div>
     <div id="contact-icon">
-      <a href="#" id="profile-link" target="_blank"><i class="bi bi-instagram"></i>Instagram</a>
+      <a href="https://www.instagram.com/abhishek_._.gowda?igsh=MWY1c3lucmV2OGE1MA==" id="profile-link" target="_blank"><i class="bi bi-instagram"></i>Instagram</a>
     </div>
     <div id="contact-icon">
       <a href="#" id="profile-link" target="_blank"><i class="bi bi-telephone"></i>CallMe</a>
     </div>
     <div id="contact-icon">
-      <a href="#" id="profile-link" target="_blank"><i class="bi bi-linkedin"></i>LinkDin</a>
+      <a href="#" id="profile-link" target="_blank"><i class="bi bi-envelope-at-fill"></i>Send Mail</a>
     </div>
     <div id="contact-icon">
-      <a href="#" id="profile-link" target="_blank"><i class="bi bi-github"></i>Git Hub</a>
+      <a href="www.linkedin.com/in/abhishek-ku-a1606a331
+
+" id="profile-link" target="_blank"><i class="bi bi-linkedin"></i>LinkDin</a>
+    </div>
+    <div id="contact-icon">
+      <a href="https://github.com/Abhishek-K-U" id="profile-link" target="_blank"><i class="bi bi-github"></i>Git Hub</a>
     </div>
   </div>
 </section>
