--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
       <a href="#" id="profile-link" target="_blank"><i class="bi bi-envelope-at-fill"></i>Send Mail</a>
     </div>
     <div id="contact-icon">
-      <a href="www.linkedin.com/in/abhishek-ku-a1606a331
-
-" id="profile-link" target="_blank"><i class="bi bi-linkedin"></i>LinkDin</a>
+      <a href="https://www.linkedin.com/in/abhishek-ku-a1606a331/" id="profile-link" target="_blank"><i class="bi bi-linkedin"></i>LinkDin</a>
     </div>
     <div id="contact-icon">
       <a href="https://github.com/Abhishek-K-U" id="profile-link" target="_blank"><i class="bi bi-github"></i>Git Hub</a>
